--- a/src/content/docs/games/7 Days To Die/change maps.mdx
+++ b/src/content/docs/games/7 Days To Die/change maps.mdx
@@ -9,7 +9,7 @@ Here is how you can change the map on your 7 Day to Die server.
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server and stop the server.
-3. Go to `Managment > File Manager` and delete all the folders and files.
+3. Go to `Management > File Manager` and delete all the folders and files.
 4. Open the `serverconfig.xml` file.
 6. Look for the `GameWorld` line and change the map to one of the following.
 
