--- a/src/content/docs/games/Counter-Strike 2/config files.mdx
+++ b/src/content/docs/games/Counter-Strike 2/config files.mdx
@@ -8,7 +8,7 @@ sidebar:
 In this guide you will learn how to edit the different Counter-Strike 2 config files such as `server.cfg`, `gamemode_server.cfg` and exactly what each one is for.
 
 ## Main Configs in CS2
-By default, **the configuration files listed below will control 99% of the things you need to do on your server**. Here is an overview of each file and what commands/convars should go where. You can edit these files by going to `Managment > File Manager`.
+By default, **the configuration files listed below will control 99% of the things you need to do on your server**. Here is an overview of each file and what commands/convars should go where. You can edit these files by going to `Management > File Manager`.
 
 :::danger
 **Don't** go online and copy someone else's entire config file. Only use what you need. When it comes to configuration, **less is more**.
