--- a/src/content/docs/games/Enshrouded/upload save.mdx
+++ b/src/content/docs/games/Enshrouded/upload save.mdx
@@ -27,7 +27,7 @@ Usually has the name `3ad85aea` if you only have one world
 ## Upload Your Enshrouded Save To Your Server
 
 1. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Enshrouded server.
-2. In the Game Host Bros panel go to `Managment > File Manager`.
+2. In the Game Host Bros panel go to `Management > File Manager`.
 3. Once there navigate to the `savegame` folder.
 4. Delete the existing save files.
 5. [Upload](/getting-started/uploading-files/) your local save files. (Ensure the local save has been renamed to `3ad85aea` on the server if it's something different)
