--- a/src/content/docs/games/Palworld/automatic backups.mdx
+++ b/src/content/docs/games/Palworld/automatic backups.mdx
@@ -19,7 +19,7 @@ This is how you can restore from an existing automatic backup.
 
 1. Download the backup you want to restore from the `Autobackups` folder and extract the downloaded file. 
 2. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Palworld server.
-3. In the Game Host Bros panel go to `Managment > File Manager`
+3. In the Game Host Bros panel go to `Management > File Manager`
 4. Once there navigate to `PAL/Save/Savegame/0`
 5. You will see a folder with a random number like 723687123871537817253, you need to copy your existing world data into that folder.
 
