--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -22,7 +22,7 @@ You CANNOT transfer a Windows server save file onto our Linux servers. Your char
 
 1. On your existing server, navigate to `PAL/Save/Savegame/0` and backup the folder with random numbers and letters.
 2. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Palworld server.
-3. In the Game Host Bros panel go to `Managment > File Manager`
+3. In the Game Host Bros panel go to `Management > File Manager`
 4. Once there navigate to `PAL/Save/Savegame/0`
 5. You will see a folder with a random number like 723687123871537817253, you need to copy your existing world data into that folder.
 
@@ -32,7 +32,7 @@ The folder with random numbers on your server must stay how it is. You only dele
 
 1. Go to `Appdata\Local\PAL\Saved\SaveGames` on your local computer and backup the file (You may need to allow hidden folders under (View))
 2. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Palworld server.
-3. In the Game Host Bros panel go to `Managment > File Manager`
+3. In the Game Host Bros panel go to `Management > File Manager`
 4. Once there navigate to `PAL/Save/Savegame/0`
 5. You will see a folder with a random number like 723687123871537817253, you need to copy your existing world data into that folder.
 
