--- a/src/content/docs/games/Soulmask/upload save.mdx
+++ b/src/content/docs/games/Soulmask/upload save.mdx
@@ -29,7 +29,7 @@ Here is where the save files are located for Soulmask.
 - `/WS/Saved/GameplaySettings/GameXishu.json`
 - `/WS/Saved/Worlds/Dedicated/Level01_Main/world.db`
 2. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Soulmask server.
-3. In the Game Host Bros panel go to `Managment > File Manager`
+3. In the Game Host Bros panel go to `Management > File Manager`
 4. Once there navigate to the same locations as above and delete the existing `GameXishu.json` and `world.db` files. (Assuming you don't want to save them, otherwise back them up)
 5. Drag in your files from your previous server.
 6. Start your Soulmask server.
@@ -41,7 +41,7 @@ Here is where the save files are located for Soulmask.
 3. Navigate to `2646460\AutoGames\` and then select the folder with the same invite code as the world you want to transfer.
 4. Copy the `world.db` and the latest `GameXishu.json` file. If your file is called `GameXishu_2.json`, then rename it to `GameXishu.json`.
 5. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Soulmask server.
-6. In the Game Host Bros panel go to `Managment > File Manager`.
+6. In the Game Host Bros panel go to `Management > File Manager`.
 7. Navigate to `/WS/Saved/GameplaySettings/` and replace the existing `GameXishu.json` file.
 8. Navigate to `/WS/Saved/Worlds/Dedicated/Level01_Main/` and replace the existing `world.db` file.
 9. Start your Soulmask server.
