--- a/src/content/docs/games/V Rising/upload save.mdx
+++ b/src/content/docs/games/V Rising/upload save.mdx
@@ -19,7 +19,7 @@ To start we first need to get your existing save file from your local PC.
 ## Uploading your existing V Rising save to your server
 
 1. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your V Rising server.
-2. In the Game Host Bros panel go to `Managment > File Manager`
+2. In the Game Host Bros panel go to `Management > File Manager`
 3. Once there navigate to `/save-data/Saves/v3/world1` and delete all the files inside (back this up if you want to save this world).
 4. [Upload](/getting-started/uploading-files/) your latest `AutoSave` file, `SessionId.json` and `StartDate.json` file.
 5. Start your server.
