--- a/src/content/docs/getting-started/uploading files.mdx
+++ b/src/content/docs/getting-started/uploading files.mdx
@@ -15,7 +15,7 @@ Using the File Manager is suitable for when you need to upload a small single fi
 
 1. Load the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Select your server.
-3. In the left-hand menu, click `Managment > File Manager`.
+3. In the left-hand menu, click `Management > File Manager`.
 4. Press the 3 dots on the top right and click `Upload`.
 
 ## Using SFTP
