--- a/src/content/docs/games/7 Days To Die/reset server.mdx
+++ b/src/content/docs/games/7 Days To Die/reset server.mdx
@@ -13,6 +13,6 @@ This should only be used as a last resort. If you keep having issues, then reach
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server and stop the server.
-3. Go to `Managment > File Manager` and delete all the folders and files.
+3. Go to `Management > File Manager` and delete all the folders and files.
 4. In the sidebar select `Configuration > Advanced`.
 5. Click `Reinstall Server` and wait for the install to finish.
