--- a/src/content/docs/games/Palworld/start new world.mdx
+++ b/src/content/docs/games/Palworld/start new world.mdx
@@ -8,7 +8,7 @@ sidebar:
 This is how you can reset your world and start fresh in Palworld.
 
 1. Login to the Game Host Bros panel and stop your Palworld server.
-2. In the Game Host Bros panel go to `Managment > File Manager`
+2. In the Game Host Bros panel go to `Management > File Manager`
 3. Once there navigate to `PAL/Save/Savegame/0`
 4. You will see a folder with a random number like 723687123871537817253, delete it.
 5. Start your server.
