--- a/src/content/docs/games/Sons Of The Forest/upload save.mdx
+++ b/src/content/docs/games/Sons Of The Forest/upload save.mdx
@@ -30,7 +30,7 @@ To start we first need to get your existing save file from your local PC.
 ## Uploading your existing Sons Of The Forest save to your server
 
 1. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Sons Of The Forest server.
-2. In the Game Host Bros panel go to `Managment > File Manager`
+2. In the Game Host Bros panel go to `Management > File Manager`
 3. Once there navigate to `/serverconfig/Saves/DedicatedServer/Multiplayer/0000000001` and delete all the `SaveData.zip` inside (back this up if you want to save this world).
 4. [Upload](/getting-started/uploading-files/) your latest `SaveData.zip` file.
 5. Start your server.
