--- a/src/content/docs/games/Valheim/upload save.mdx
+++ b/src/content/docs/games/Valheim/upload save.mdx
@@ -10,7 +10,7 @@ In this tutorial, we will guide you through the process of uploading a custom wo
 If you get stuck at any time, Game Host Bros offers free save transfers. Just reach out to a bro on [Discord](https://discord.gg/FN4XgbAwzr)
 
 1. Login to the [Game Host Bros Game Panel](https://panel.gamehostbros.com/) and stop your Valheim server.
-2. In the Game Host Bros panel go to `Managment > File Manager`
+2. In the Game Host Bros panel go to `Management > File Manager`
 3. Once there navigate to `.config/unity3d/IronGate/Valheim/worlds_local`
 4. Drag in your existing `.fwl` and `.db` files.
 5. In the sidebar, go to `Configuration > Startup Parameters`
