Update more titles

--- a/src/content/docs/games/Enshrouded/connect to your server.mdx
+++ b/src/content/docs/games/Enshrouded/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enshrouded Connect to Your Server
+title: How To Connect To Your Enshrouded Server
 description: Learn how to join your Enshrouded dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
