--- a/src/content/docs/games/Enshrouded/update your server.mdx
+++ b/src/content/docs/games/Enshrouded/update your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enshrouded Update Your Server
+title: How To Update Your Enshrouded Server
 description: Learn how to update your Enshrouded dedicated server.
 sidebar:
   label: Update Your Server
