--- a/src/content/docs/games/Enshrouded/upload save.mdx
+++ b/src/content/docs/games/Enshrouded/upload save.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enshrouded Upload Save
+title: How To Upload Your Existing Enshrouded Server Save
 description: Step-by-step guide on how to upload your save file to your Enshrouded server.
 sidebar:
   label: Upload Save
