--- a/src/content/docs/games/Factorio/troubleshooting.mdx
+++ b/src/content/docs/games/Factorio/troubleshooting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Factorio Troubleshooting
+title: Troubleshooting Factorio Server Issues
 description: Learn how to fix common Factorio server issues.
 sidebar:
   label: Troubleshooting
