--- a/src/content/docs/games/Factorio/update your server.mdx
+++ b/src/content/docs/games/Factorio/update your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Factorio Update Your Server
+title: How To Update Your Factorio Server
 description: Learn how to update your Factorio dedicated server.
 sidebar:
   label: Update Your Server
