--- a/src/content/docs/games/Factorio/upload custom map.mdx
+++ b/src/content/docs/games/Factorio/upload custom map.mdx
@@ -1,5 +1,5 @@
 ---
-title: Factorio Upload Existing Save
+title: How To Upload Your Existing Factorio Save
 description: Step-by-step guide on how to upload your existing save file to your Factorio server.
 sidebar:
   label: Upload Existing Save
