--- a/src/content/docs/games/Left 4 Dead 2/change server name.mdx
+++ b/src/content/docs/games/Left 4 Dead 2/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: L4D Change Server Name
+title: How To Change Your L4D2 Server Name
 description: Learn how to change your server hostname on your L4D server.
 tableOfContents: false
 sidebar:
