--- a/src/content/docs/games/Left 4 Dead 2/fastdl.mdx
+++ b/src/content/docs/games/Left 4 Dead 2/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: L4D FastDL
+title: How To Setup FastDL In L4D2
 description: Learn how to setup FastDL for your L4D server.
 sidebar:
   label: FastDL
