--- a/src/content/docs/games/Palworld/configure palworld.mdx
+++ b/src/content/docs/games/Palworld/configure palworld.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configure Your Palworld Server
+title: How To Configure Your Palworld Server
 description: Learn how to configure your Palworld Server 
 sidebar:
   label: Configure Your Server
