--- a/src/content/docs/games/Palworld/install mods.mdx
+++ b/src/content/docs/games/Palworld/install mods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Install Mods
+title: How To Install Mods On Your Palworld Server
 description: Learn how to install mods and plugins on your Palworld server.
 sidebar:
   label: Install Mods
