--- a/src/content/docs/games/Palworld/rcon.mdx
+++ b/src/content/docs/games/Palworld/rcon.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld RCON
+title: How To Use RCON On Palworld
 description: Learn how to use RCON on your Palworld server along with all the commands.
 sidebar:
   label: RCON
