--- a/src/content/docs/games/Palworld/set a password.mdx
+++ b/src/content/docs/games/Palworld/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Setting a Password
+title: How To Set A Password On your Palworld Server
 description: Learn how to set a password on your Palworld server.
 tableOfContents: false
 sidebar:
