--- a/src/content/docs/games/Palworld/start new world.mdx
+++ b/src/content/docs/games/Palworld/start new world.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Resetting Your World
+title: How To Reset Your World On Palworld
 description: Step-by-step guide on how to start a new world on your Palworld server.
 sidebar:
   label: Resetting Your World
