--- a/src/content/docs/games/Palworld/troubleshooting.mdx
+++ b/src/content/docs/games/Palworld/troubleshooting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Troubleshooting
+title: Troubleshooting Your Palworld Server
 description: Learn how to fix common Palworld server issues.
 sidebar:
   label: Troubleshooting
