--- a/src/content/docs/games/Palworld/update your server.mdx
+++ b/src/content/docs/games/Palworld/update your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Update Your Server
+title: How To Update Your Palworld Server
 description: Learn how to update your Palworld dedicated server.
 sidebar:
   label: Update Your Server
