--- a/src/content/docs/games/Palworld/upload save.mdx
+++ b/src/content/docs/games/Palworld/upload save.mdx
@@ -1,8 +1,8 @@
 ---
-title: Palworld Upload Server/Co-op Save
+title: How To Upload Your Existing Palworld Server Save
 description: Step-by-step guide on how to upload your save file to your Palworld server.
 sidebar:
-  label: Upload Server/Co-op Save
+  label: Upload Existing Save
 ---
 
 In this tutorial, we will guide you through the process of uploading an existing world and player save file to your Palworld dedicated server.
