--- a/src/content/docs/games/Soulmask/adding admins.mdx
+++ b/src/content/docs/games/Soulmask/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Adding Admins
+title: How To Add Admins To Your Soulmask Server
 description: Learn how to add admins to your Soulmask server.
 sidebar:
   label: Adding Admins
