--- a/src/content/docs/games/Soulmask/change server name.mdx
+++ b/src/content/docs/games/Soulmask/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Change Server Name
+title: How To Change Your Soulmask Server Name
 description: Learn how to change your server hostname on your Soulmask server.
 tableOfContents: false
 sidebar:
