--- a/src/content/docs/games/Soulmask/configure your server.mdx
+++ b/src/content/docs/games/Soulmask/configure your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configure Your Soulmask Server
+title: How To Configure Your Soulmask Server
 description: Learn how to change game settings and configure your Soulmask server
 sidebar:
   label: Configure Your Server
