--- a/src/content/docs/games/Soulmask/connect to your server.mdx
+++ b/src/content/docs/games/Soulmask/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Connect to Your Server
+title: How To Connect To Your Soulmask Server
 description: Learn how to join your Soulmask dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
