--- a/src/content/docs/games/Soulmask/set a password.mdx
+++ b/src/content/docs/games/Soulmask/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Setting a Password
+title: How To Set A Password On Your Soulmask Server
 description: Learn how to set a password on your Soulmask server.
 tableOfContents: false
 sidebar:
