--- a/src/content/docs/games/Soulmask/update your server.mdx
+++ b/src/content/docs/games/Soulmask/update your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Update Your Server
+title: How To Update Your Soulmask Server
 description: Learn how to update your Soulmask dedicated server.
 sidebar:
   label: Update Your Server
