--- a/src/content/docs/games/Soulmask/upload save.mdx
+++ b/src/content/docs/games/Soulmask/upload save.mdx
@@ -1,5 +1,5 @@
 ---
-title: Soulmask Upload Existing World Save
+title: How To Upload Existing Soulmask Server Save
 description: Learn how you can upload an existing Soulmask world and player data to your dedicated server.
 sidebar:
   label: Upload Existing Save
