--- a/src/content/docs/games/Sven Co-op/change server name.mdx
+++ b/src/content/docs/games/Sven Co-op/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sven Co-op Change Server Name
+title: How To Change Your Sven Co-op Server Name
 description: Learn how to change your server hostname on your Sven Co-op server.
 tableOfContents: false
 sidebar:
