--- a/src/content/docs/games/Sven Co-op/connect to your server.mdx
+++ b/src/content/docs/games/Sven Co-op/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sven Co-op Connect to Your Server
+title: How To Connect To Your Sven Co-op Server
 description: Learn how to join your Sven Co-op dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
