--- a/src/content/docs/games/Sven Co-op/fastdl.mdx
+++ b/src/content/docs/games/Sven Co-op/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sven Co-op FastDL
+title: How To Setup FastDL On Sven Co-op
 description: Learn how to setup FastDL for your Sven Co-op server.
 sidebar:
   label: FastDL
