--- a/src/content/docs/games/V Rising/change difficulty.mdx
+++ b/src/content/docs/games/V Rising/change difficulty.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Change Difficulty
+title: How To Change The Difficulty On Your V Rising Server
 description: Learn how to change your server difficulty on your V Rising server.
 tableOfContents: false
 sidebar:
