--- a/src/content/docs/games/V Rising/change server name.mdx
+++ b/src/content/docs/games/V Rising/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Change Server Name
+title: How To Change Your V Rising Server Name
 description: Learn how to change your server hostname on your V Rising server.
 tableOfContents: false
 sidebar:
