--- a/src/content/docs/games/V Rising/configure your server.mdx
+++ b/src/content/docs/games/V Rising/configure your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configure Your V Rising Server
+title: How To Configure Your V Rising Server
 description: Learn how to configure your V Rising Server 
 sidebar:
   label: Configure Your Server
