--- a/src/content/docs/games/V Rising/connect to your server.mdx
+++ b/src/content/docs/games/V Rising/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Connect to Your Server
+title: How To Connect To Your V Rising Server
 description: Learn how to join your V Rising dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
