--- a/src/content/docs/games/V Rising/enable voice chat.mdx
+++ b/src/content/docs/games/V Rising/enable voice chat.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enable Voice Chat For Your V Rising Server
+title: How To Enable Voice Chat For Your V Rising Server
 description: Discover how to enable voice chat for your V Rising server in our easy to follow guide.
 sidebar:
   label: Enable Voice Chat
