--- a/src/content/docs/games/V Rising/install mods.mdx
+++ b/src/content/docs/games/V Rising/install mods.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Install Mods
+title: How To Install Mods On Your V Rising Server
 description: Learn how to install mods and plugins on your V Rising server.
 sidebar:
   label: Install Mods
