--- a/src/content/docs/games/V Rising/set a password.mdx
+++ b/src/content/docs/games/V Rising/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Setting a Password
+title: How To Set A Password On Your V Rising Server
 description: Learn how to set a password on your V Rising server.
 tableOfContents: false
 sidebar:
