--- a/src/content/docs/games/V Rising/upload save.mdx
+++ b/src/content/docs/games/V Rising/upload save.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Upload Save
+title: How To Upload Your Existing V Rising Server Save
 description: Step-by-step guide on how to upload your save file to your V Rising server.
 sidebar:
   label: Upload Save
