--- a/src/content/docs/games/Factorio/install mods.mdx
+++ b/src/content/docs/games/Factorio/install mods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Factorio Install Mods
+title: How To Install Mods On Factorio
 description: Learn how to install mods and plugins on your Factorio server.
 sidebar:
   label: Install Mods
