--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Connect to Your Server
+title: How To Connect To Your Palworld Server
 description: Learn how to join your Palworld dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
