--- a/src/content/docs/games/V Rising/adding admins.mdx
+++ b/src/content/docs/games/V Rising/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: V Rising Adding Admins
+title: How To Add Admins To Your V Rising Server
 description: Learn how to add admins to your V Rising server.
 sidebar:
   label: Adding Admins
