update page titles

--- a/src/content/docs/games/7 Days To Die/change maps.mdx
+++ b/src/content/docs/games/7 Days To Die/change maps.mdx
@@ -1,5 +1,5 @@
 ---
-title: 7D2D Change Maps
+title: How To Change Maps On Your 7D2D Server
 description: Learn how to change the map on your 7D2D server.
 sidebar:
   label: Change Maps
