--- a/src/content/docs/games/7 Days To Die/change version.mdx
+++ b/src/content/docs/games/7 Days To Die/change version.mdx
@@ -1,5 +1,5 @@
 ---
-title: 7D2D Change Version
+title: How To Change Your 7D2D Server Version
 description: Learn how to change your 7D2D version for clients and your server.
 sidebar:
   label: Change Version
