--- a/src/content/docs/games/7 Days To Die/connect to your server.mdx
+++ b/src/content/docs/games/7 Days To Die/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: 7D2D Connect to Your Server
+title: How To Connect To Your 7D2D Server
 description: Learn how to join your 7D2D dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
