--- a/src/content/docs/games/7 Days To Die/reset server.mdx
+++ b/src/content/docs/games/7 Days To Die/reset server.mdx
@@ -1,5 +1,5 @@
 ---
-title: 7D2D Reset Server
+title: How To Reset Your 7D2D Server
 description: Learn how to totally reset your 7D2D server.
 sidebar:
   label: Reset Server
