--- a/src/content/docs/games/7 Days To Die/set a password.mdx
+++ b/src/content/docs/games/7 Days To Die/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: 7D2D Setting a Password
+title: How To Set A Password On Your 7D2D Server
 description: Learn how to set a password on your 7D2D server.
 tableOfContents: false
 sidebar:
