--- a/src/content/docs/games/Counter-Strike 1.6/change server name.mdx
+++ b/src/content/docs/games/Counter-Strike 1.6/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS 1.6 Change Server Name
+title: How To Change Your CS 1.6 Server Name
 description: Learn how to change your server hostname on your CS 1.6 server.
 tableOfContents: false
 sidebar:
