--- a/src/content/docs/games/Counter-Strike 1.6/connect to your server.mdx
+++ b/src/content/docs/games/Counter-Strike 1.6/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS 1.6 Connect to Your Server
+title: How To Connect To Your CS 1.6 Server
 description: Learn how to join your CS 1.6 dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
