--- a/src/content/docs/games/Counter-Strike 1.6/fastdl.mdx
+++ b/src/content/docs/games/Counter-Strike 1.6/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS 1.6 FastDL
+title: How To Setup FastDL For CS 1.6
 description: Learn how to setup FastDL for your CS 1.6 server.
 sidebar:
   label: FastDL
