--- a/src/content/docs/games/Counter-Strike 1.6/install metamod.mdx
+++ b/src/content/docs/games/Counter-Strike 1.6/install metamod.mdx
@@ -1,5 +1,5 @@
 ---
-title: CS 1.6 Install Metamod
+title: How To Install Metamod On CS 1.6
 description: Learn how to install Metamod on your CS 1.6 server.
 sidebar:
   label: Install Metamod
