--- a/src/content/docs/games/Counter-Strike Source/change server name.mdx
+++ b/src/content/docs/games/Counter-Strike Source/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: CSS Change Server Name
+title: How To Change Your CSS Server Name
 description: Learn how to change your server hostname on your CSS server.
 tableOfContents: false
 sidebar:
