--- a/src/content/docs/games/Counter-Strike Source/connect to your server.mdx
+++ b/src/content/docs/games/Counter-Strike Source/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: CSS Connect to Your Server
+title: How To Connect To Your CSS Server
 description: Learn how to join your CSS dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
