--- a/src/content/docs/games/Counter-Strike Source/fastdl.mdx
+++ b/src/content/docs/games/Counter-Strike Source/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: CSS FastDL
+title: How To Setup FastDL For Your CSS Server
 description: Learn how to setup FastDL for your CSS server.
 sidebar:
   label: FastDL
