--- a/src/content/docs/games/Day Of Defeat/change server name.mdx
+++ b/src/content/docs/games/Day Of Defeat/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: DOD Change Server Name
+title: How To Change Your Day Of Defeat Server Name
 description: Learn how to change your server hostname on your DOD server.
 tableOfContents: false
 sidebar:
