--- a/src/content/docs/games/Day Of Defeat/connect to your server.mdx
+++ b/src/content/docs/games/Day Of Defeat/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: DOD Connect to Your Server
+title: How To Connect To Your Day Of Defeat Server
 description: Learn how to join your DOD dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
