--- a/src/content/docs/games/Day Of Defeat/fastdl.mdx
+++ b/src/content/docs/games/Day Of Defeat/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: DOD FastDL
+title: How To Setup FastDL For Day Of Defeat
 description: Learn how to setup FastDL for your DOD server.
 sidebar:
   label: FastDL
