--- a/src/content/docs/games/Day Of Defeat/install metamod.mdx
+++ b/src/content/docs/games/Day Of Defeat/install metamod.mdx
@@ -1,5 +1,5 @@
 ---
-title: DOD Install Metamod
+title: How To Install Metamod On Your Day Of Defeat Server
 description: Learn how to install Metamod on your DOD server.
 sidebar:
   label: Install Metamod
