--- a/src/content/docs/games/Half Life 1/change server name.mdx
+++ b/src/content/docs/games/Half Life 1/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: HL1 Change Server Name
+title: How To Change Your Half Life Server Name
 description: Learn how to change your server hostname on your HL1 server.
 tableOfContents: false
 sidebar:
