--- a/src/content/docs/games/Half Life 1/fastdl.mdx
+++ b/src/content/docs/games/Half Life 1/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: Half Life FastDL
+title: How To Setup FastDL For Your Half Life Server
 description: Learn how to setup FastDL for your Half Life server.
 sidebar:
   label: FastDL
