--- a/src/content/docs/games/Killing Floor 2/change server name.mdx
+++ b/src/content/docs/games/Killing Floor 2/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Killing Floor 2 Change Server Name
+title: How To Change Your Killing Floor 2 Server Name
 description: Learn how to change your server hostname on your Killing Floor 2 server.
 tableOfContents: false
 sidebar:
