--- a/src/content/docs/games/Killing Floor 2/server motd.mdx
+++ b/src/content/docs/games/Killing Floor 2/server motd.mdx
@@ -1,5 +1,5 @@
 ---
-title: Killing Floor 2 Server MOTD
+title: How To Change Your MOTD On Your Killing Floor 2 Server
 description: Learn how to configure the Server MOTD on your Killing Floor 2 server.
 tableOfContents: false
 sidebar:
