--- a/src/content/docs/games/Killing Floor 2/set a password.mdx
+++ b/src/content/docs/games/Killing Floor 2/set a password.mdx
@@ -1,5 +1,5 @@
 ---
-title: Killing Floor 2 Setting a Password
+title: How To Set A Password On Your Killing Floor 2 Server
 description: Learn how to set a password on your Killing Floor 2 server.
 tableOfContents: false
 sidebar:
