--- a/src/content/docs/games/Killing Floor 2/web admin.mdx
+++ b/src/content/docs/games/Killing Floor 2/web admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: Killing Floor 2 Setup Web Admin
+title: How To Setup Web Admin On Your Killing Floor 2 Server
 description: Learn how to set a setup Web Admin on your Killing Floor 2 server.
 tableOfContents: false
 sidebar:
