--- a/src/content/docs/games/Palworld/change server name.mdx
+++ b/src/content/docs/games/Palworld/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Palworld Change Server Name
+title: How To Change Your Palworld Server Name
 description: Learn how to change your server hostname on your Palworld server.
 tableOfContents: false
 sidebar:
