--- a/src/content/docs/games/Quake 3/adding custom maps.mdx
+++ b/src/content/docs/games/Quake 3/adding custom maps.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 Arena Adding Custom Maps
+title: How To Add Custom Maps To Quake 3 Arena
 description: Learn how to add pak0 files to your Quake 3 Arena server.
 sidebar:
   label: Add Custom Maps
