--- a/src/content/docs/games/Quake 3/adding pak0.mdx
+++ b/src/content/docs/games/Quake 3/adding pak0.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 Arena Adding pak0 Files
+title: How To Add pak0 Files To Quake 3 Arena
 description: Learn how to add pak0 files to your Quake 3 Arena server.
 sidebar:
   label: pak0 Files
