--- a/src/content/docs/games/Quake 3/connect to your server.mdx
+++ b/src/content/docs/games/Quake 3/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 Arena Connect to Your Server
+title: How To Connect To Your Quake 3 Arena Server
 description: Learn how to join your Q3 Arena dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
