--- a/src/content/docs/games/Quake 3/fastdl.mdx
+++ b/src/content/docs/games/Quake 3/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 FastDL
+title: How To Setup FastDL For Quake 3 Arena
 description: Learn how to setup FastDL for your Quake 3 Arena server.
 sidebar:
   label: FastDL
