--- a/src/content/docs/games/Quake 3/mapcycle.mdx
+++ b/src/content/docs/games/Quake 3/mapcycle.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 Arena Mapcycle
+title: How To Adjust The Mapcycle For Your Quake 3 Arena Server
 description: Learn how to setup a mapcycle file to your Quake 3 Arena server.
 sidebar:
   label: Mapcycle
