--- a/src/content/docs/games/Quake 3/rcon.mdx
+++ b/src/content/docs/games/Quake 3/rcon.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 RCON
+title: How To Use RCON On Your Quake 3 Arena Server
 description: Learn how to use RCON on your Quake 3 Arena server.
 sidebar:
   label: RCON
