--- a/src/content/docs/games/Quake 3/troubleshooting.mdx
+++ b/src/content/docs/games/Quake 3/troubleshooting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Q3 Troubleshooting
+title: Q3 Arena Troubleshooting
 description: Learn how to fix common Quake 3 Arena server issues.
 sidebar:
   label: Troubleshooting
