--- a/src/content/docs/games/Quake Live/adding admins.mdx
+++ b/src/content/docs/games/Quake Live/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Adding Admins
+title: How To Add Admins To Your Quake Live Server
 description: Learn how to add admins to your Quake Live server.
 sidebar:
   label: Adding Admins
