--- a/src/content/docs/games/Quake Live/change server name.mdx
+++ b/src/content/docs/games/Quake Live/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Change Server Name
+title: How To Change Your Quake Live Server Name
 description: Learn how to change your server hostname on your Quake Live server.
 tableOfContents: false
 sidebar:
