--- a/src/content/docs/games/Quake Live/connect to your server.mdx
+++ b/src/content/docs/games/Quake Live/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Connect to Your Server
+title: How To Connect To Your Quake Live Server
 description: Learn how to join your Quake Live dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
