--- a/src/content/docs/games/Quake Live/custom game factories.mdx
+++ b/src/content/docs/games/Quake Live/custom game factories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Custom Game Factories
+title: How To Setup Quake Live Custom Game Factories
 description: Learn how to setup Custom Game Factories for your Quake Live server.
 sidebar:
   label: Custom Game Factories
