--- a/src/content/docs/games/Quake Live/rcon.mdx
+++ b/src/content/docs/games/Quake Live/rcon.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live RCON
+title: How To Use RCON On Your Quake Live Server
 description: Learn how to use RCON on your Quake Live server.
 sidebar:
   label: RCON
