--- a/src/content/docs/games/Rust/banning players.mdx
+++ b/src/content/docs/games/Rust/banning players.mdx
@@ -1,5 +1,5 @@
 ---
-title: Rust Banning Players
+title: How To Ban Players On Your Rust Server
 description: Learn how to ban players on your Rust server.
 sidebar:
   label: Banning Players
