--- a/src/content/docs/games/Satisfactory/downloading save.mdx
+++ b/src/content/docs/games/Satisfactory/downloading save.mdx
@@ -1,5 +1,5 @@
 ---
-title: Satisfactory Download Server Save
+title: How To Download Your Existing Satisfactory Server Save
 description: Step-by-step guide on how to download your save file from your Satisfactory server.
 sidebar:
   label: Download Save
