--- a/src/content/docs/games/Satisfactory/upload save.mdx
+++ b/src/content/docs/games/Satisfactory/upload save.mdx
@@ -1,5 +1,5 @@
 ---
-title: Satisfactory Upload Single-Player Save
+title: How To Upload Your Satisfactory Single-Player Save To Your Server
 description: Step-by-step guide on how to upload your single-player save file to your Satisfactory server.
 sidebar:
   label: Upload Single-Player Save
