--- a/src/content/docs/games/Team Fortress 2/change server name.mdx
+++ b/src/content/docs/games/Team Fortress 2/change server name.mdx
@@ -1,5 +1,5 @@
 ---
-title: TF2 Change Server Name
+title: How To Change Your Team Fortress 2 Server Name
 description: Learn how to change your server hostname on your TF2 server.
 tableOfContents: false
 sidebar:
