--- a/src/content/docs/games/Team Fortress 2/fastdl.mdx
+++ b/src/content/docs/games/Team Fortress 2/fastdl.mdx
@@ -1,5 +1,5 @@
 ---
-title: TF2 FastDL
+title: How To Setup FastDL On Your Team Fortress 2 Server
 description: Learn how to setup FastDL for your TF2 server.
 sidebar:
   label: FastDL
