--- a/src/content/docs/games/Half Life 1/connect to your server.mdx
+++ b/src/content/docs/games/Half Life 1/connect to your server.mdx
@@ -1,5 +1,5 @@
 ---
-title: HL1 Connect to Your Server
+title: How To Connect To Your Half Life Server
 description: Learn how to join your HL1 dedicated server using the IP address.
 sidebar:
   label: Connect to Your Server
