--- a/src/content/docs/games/Half Life 1/install metamod.mdx
+++ b/src/content/docs/games/Half Life 1/install metamod.mdx
@@ -1,5 +1,5 @@
 ---
-title: HL1 Install Metamod
+title: How To Setup Metamod For Half Life
 description: Learn how to install Metamod on your HL1 server.
 sidebar:
   label: Install Metamod
