--- a/src/content/docs/games/Quake Live/mappool.mdx
+++ b/src/content/docs/games/Quake Live/mappool.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Map Pool
+title: How To Setup A Quake Live Map Pool
 description: Learn how to setup a map pool for your Quake Live server.
 sidebar:
   label: Map Pool
