--- a/src/content/docs/games/Quake Live/play workshop maps.mdx
+++ b/src/content/docs/games/Quake Live/play workshop maps.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quake Live Play Workshop Maps
+title: How To Play Workshop Maos On Quake Live
 description: Learn how to play workshop maps with friends on your Quake Live server.
 sidebar:
   label: Play Workshop Maps
