--- a/src/content/docs/games/Rust/adding admins.mdx
+++ b/src/content/docs/games/Rust/adding admins.mdx
@@ -1,5 +1,5 @@
 ---
-title: Rust Adding Admins
+title: How To Add Admins On Your Rust Server
 description: Learn how to add admins to your Rust server.
 sidebar:
   label: Adding Admins
