--- a/src/content/docs/games/7 Days To Die/change server name.mdx
+++ b/src/content/docs/games/7 Days To Die/change server name.mdx
@@ -10,10 +10,9 @@ This is what you do if you need to change your server name on your 7 Days To Die
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server.
-3. Go to `System > Console` and Stop your server.
-4. Click on `Management > File Manager.`
-5. Open the file `serverconfig.xml` and replace the property value `ServerName` with your own server name.
-6. Start your server.
+3. Go to `Configuration > Startup Parameters`.
+4. Find the `Server Name` setting and enter your desired server name.
+5. Restart your server.
 
 :::note
 This setting will override anything you have manually set inside of server.cfg
