--- a/src/content/docs/games/7 Days To Die/change version.mdx
+++ b/src/content/docs/games/7 Days To Die/change version.mdx
@@ -9,12 +9,12 @@ Here is how you can change your 7D2D version for both your server and game clien
 
 ## Change 7D2D Server Version
 
-Changing the server version is only avaliable with 7D2D Vanilla versions. As mods only work with specific versions of 7D2D, we enforce those server versions for those particular mods.
+Changing the server version is only available with 7D2D Vanilla versions. As mods only work with specific versions of 7D2D, we enforce those server versions for those particular mods.
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server.
 3. Go to `Configuration > Startup Parameters`.
-4. Look for `7D2D Version` or `Beta Branch` and enter the version you want to use such as `alpha20.7`.
+4. Look for `Server Version` and enter the version you want to use such as `alpha20.7` or `latest_experimental`.
 5. In the sidebar select `Configuration > Advanced`.
 6. Click `Reinstall Server`.
 
