--- a/src/content/docs/games/7 Days To Die/set a password.mdx
+++ b/src/content/docs/games/7 Days To Die/set a password.mdx
@@ -10,7 +10,6 @@ This is what you do if you need to set a password on your 7 Days to Die server.
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server.
-3. Go to `System > Console` and Stop your server.
-4. Click on `Management > File Manager.`
-5. Open the file `serverconfig.xml` and add the property value for `ServerPassword` with your own password. (By default this is empty)
-6. Start your server.
+2. Click `Configuration > Startup Parameters`.
+3. Look for `Server Password` and then type the password you want.
+4. Go back to the console page, then restart your server.
