--- a/src/content/docs/games/7 Days To Die/install mods.mdx
+++ b/src/content/docs/games/7 Days To Die/install mods.mdx
@@ -5,31 +5,29 @@ sidebar:
   label: Install Mods
 ---
 
+Here is how you can find mods for your 7D2D Server.
+
+## Downloading Mods
+
 Mods can be found from sites like [Nexus Mods](https://www.nexusmods.com/7daystodie/mods/) once downloaded extract the mod file.
+
+:::tip
+Not all mods have updated for 1.0 yet be sure to sort by last updated
+:::
 
 ## Installing Mods
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your 7D2D server.
-3. Go to Console and Stop your server.
-4. Go to `Management > File Manager`.
-5. Create a folder named `Mods`
-6. Drag the extracted Mod file into `/Mods/[ModName]/ModInfo.XML`
-7. Restart Your Server.
-
-:::danger
-Always back up your world manually before installing any Mods! 
-:::
+3. Go to `Management > File Manager`.
+4. Create a folder named `Mods`
+5. Drag the extracted Mod file into `/Mods/[ModName]/ModInfo.XML`
+6. Restart Your Server.
 
 ## Installing Mods Locally
 
 1. Navigate to your game files
 2. Create a folder named `Mods`
 3. Extract your downloaded Mod File into `/Mods/[ModName]/ModInfo.XML`
-
-
-:::tip
-If your mod extracts to [Mods/[Modname1]/[Modname2] You should delete [Modname1] and keep [Modname2].
-:::
 
 And there you have it, that's how you install mods in 7D2D
