Update connect to your server.mdx
Updated to include Xbox servers

--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -7,10 +7,22 @@ sidebar:
 
 Here is how you can join your Palworld dedicated server using the IP address.
 
-## How to Connect to Your Palworld Server
+## How to Connect to Your PC Palworld Server 
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
 2. Click on your Palworld server.
 3. Copy the [server IP address](https://www.youtube.com/watch?v=Ap7DtDF-wYg) from the sidebar.
 4. Open Palworld and click `Join Multiplayer Game`
 5. At the bottom of the screen you will see `127.0.0.1:8211`, replace this with your IP address and click `Connect`
+
+## How to Connect to Your Xbox Palworld Server
+
+1. Select "Join Multiplayer Game" in the Palworld menu.
+2. Select "Community Servers"
+3. Search your server name in the box located at the top.
+4. Once found select your server to connect.
+
+:::tip
+It may take a couple of minutes for your server to show up.
+:::
+
