--- a/src/content/docs/games/7 Days To Die/install mods.mdx
+++ b/src/content/docs/games/7 Days To Die/install mods.mdx
@@ -1,1 +1,33 @@
+---
+title: How To Install Mods On Your 7D2D Server
+description: Learn how to install mods on your 7D2D Server.
+sidebar:
   label: Install Mods
+---
+
+Here is how you can find mods for your 7D2D Server.
+
+## Downloading Mods
+
+Mods can be found from sites like [Nexus Mods](https://www.nexusmods.com/7daystodie/mods/) once downloaded extract the mod file.
+
+:::tip
+Not all mods have updated for 1.0 yet be sure to sort by last updated
+:::
+
+## Installing Mods
+
+1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
+2. Click on your 7D2D server.
+3. Go to `Management > File Manager`.
+4. Create a folder named `Mods`
+5. Drag the extracted Mod file into `/Mods/[ModName]/ModInfo.XML`
+6. Restart Your Server.
+
+## Installing Mods Locally
+
+1. Navigate to your game files
+2. Create a folder named `Mods`
+3. Extract your downloaded Mod File into `/Mods/[ModName]/ModInfo.XML`
+
+And there you have it, that's how you install mods in 7D2D
