Update connect to your server.mdx

--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -17,10 +17,11 @@ Here is how you can join your Palworld dedicated server using the IP address.
 
 ## How to Connect to Your Xbox Palworld Server
 
-1. Select "Join Multiplayer Game" in the Palworld menu.
-2. Select "Community Servers"
-3. Search your server name in the box located at the top.
-4. Once found select your server to connect.
+1. Name your Server in the Panel by following [This Guide](https://guides.gamehostbros.com/games/palworld/change-server-name/)
+2. Select "Join Multiplayer Game" in the Palworld menu.
+3. Select "Community Servers"
+4. Search your server name in the box located at the top.
+5. Once found select your server to connect.
 
 :::tip
 It may take a couple of minutes for your server to show up.
